--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -2,15 +2,6 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=eDP-1,1920x1080@144.003006,0x0,1.00
 
-# Dual monitor example on G15 Strix
-# eDP-1 is the built in monitor while DP-1 is external
-# Both monitors here are at 1440 and 165Hz
-# DP-1 is on the left and  eDP-1 is on the right
-#monitor=DP-1,2560x1440@165,0x0,1
-#monitor=eDP-1,2560x1440@165,2560x0,1.25
-
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
-
 # Execute your favorite apps at launch
 exec-once = ~/.config/hypr/scripts/xdg-portal-hyprland # Make sure the correct portal is running
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP # Wayland magic (screen sharing etc.)
@@ -26,7 +17,6 @@ exec = ~/.config/hypr/scripts/bgaction # Sets the background based on theme
 # exec = mpvpaper -vso "no-audio --loop-playlist shuffle" eDP-1 ~/Resimler/Wallpapers/GIF/kaneki-transformation-tokyo-ghoul-moewalls-com.mp4
 #exec = mpvpaper -so "no-audio --loop-playlist shuffle" eDP-1 ~/Resimler/Wallpapers/GIF/kaneki-transformation-tokyo-ghoul-moewalls-com.mp4
 # exec = mpvpaper -vso "no-audio --loop-playlist shuffle" eDP-1 Resimler/Wallpapers/GIF/Vergil-Devil-May-Cry.mp4
-# For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = tr
     kb_variant =
@@ -45,7 +35,6 @@ input {
 }
 
 general {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     gaps_in = 5
     gaps_out = 10
@@ -89,7 +78,6 @@ decoration {
 animations {
     enabled = yes
 
-    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
     bezier = myBezier, 0.10, 0.9, 0.1, 1.05
 
     animation = windows, 1, 10, myBezier, slide
@@ -100,28 +88,22 @@ animations {
 }
 
 dwindle {
-    # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
     pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = yes # you probably want this
 }
 
 master {
-    # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
     new_is_master = true
 }
 
 gestures {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = true
+    workspace_swipe = true # You can switch desktops on laptops by using touchpad. Use your 3 fingers and swipe to left or right.
 }
 
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
 device:epic mouse V1 {
     sensitivity = -0.5
 }
 
-# Example windowrule v1
 windowrule = float,^(pavucontrol)$
 windowrule = float,^(blueman-manager)$
 windowrule = float,^(nm-connection-editor)$
@@ -130,10 +112,7 @@ windowrule = float, title:^(btop)$
 windowrule = float, title:^(update-sys)$
 windowrule = float, title:^(galculator)$
 
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-# rules below would make the specific app transparent
+
 windowrulev2 = opacity 0.8 0.8,class:^(alacritty)$
 windowrulev2 = animation popin,class:^(alacritty)$,title:^(update-sys)$
 windowrulev2 = animation popin,class:^(thunar)$
@@ -144,10 +123,8 @@ windowrulev2 = animation slide,class:^(wofi)$
 windowrulev2 = move 100%-433 53,class:^(wofi)$,title:^(clippick)$
 
 
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, F, fullscreen,
 bind = $mainMod, Return, exec, alacritty  # open the terminal
 bind = $mainMod, Q, killactive, # close the active window
@@ -198,21 +175,17 @@ bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
+#mouse:272 is LMB, mouse:273 is RMB
+bindm = $mainMod, mouse:272, movewindow   
 bindm = $mainMod, mouse:273, resizewindow
-
-# Source a file (multi-file configs)
-# source = ~/.config/hypr/myColors.conf
-#
 
 # Brightness controls
 bind=,XF86MonBrightnessDown,exec,brightnessctl set 5%-
 bind=,XF86MonBrightnessUp,exec,brightnessctl set +5%
 
-# Pulse Audio controls
+# PulseAudio controls
 bind = , xf86audioraisevolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
 bind = , xf86audiolowervolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
-
 bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle # mute sound
 
 # Media player controls
