--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -56,12 +56,14 @@ decoration {
     fullscreen_opacity = 1.0
 
     dim_inactive = false
-
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)    
     rounding = 5
+
+    shadow {
+      enabled = yes
+      range = 4
+      render_power = 3
+      color = rgba(1a1a1aee) 
+    }
     # ...
 
     blur {
